# notify-build-stop

./: .gitignore  Makefile  README.md  docker-compose.yml  env_sample  env_sample_docker  mail_server.py  main.py  pyproject.toml
init-db/: entrypoint.sh  init.sql
src/db/: __init__.py  db.py  models.py
src/mail/: mail.py  test_mail.py
src/mocks/: record.json  search.json
src/queries/: data.py  orders.py
src/scraper/: process.py  scraper.py  test_process.py  test_scraper.py
src/utils/: test_utils.py  utils.py
