[project]
name = "notify-build-stop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=4.0.1",
    "httpx>=0.28.1",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
]
